# barefoot-data-portal

./: AGENTS.md  Makefile  README.md  pyproject.toml
assets/: base_numbers.py  cli_enriched_numbers.sh  enriched_numbers.sql  filtered_numbers.sql  transformed_numbers.py
assets/raw/: base_numbers.py  filtered_numbers.sql
bdp/: __init__.py  api.py  cli.py  docs.py  materialize.py  show.py  test.py
tests/: test_materialize.py  test_show.py
